change header to div

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="header">
 
-      <header class="left-section">
+      <div class="left-section">
         <img class="hamburger-menu" src="images/hamburger-menu.svg">
         <img class="youtube-logo" src="images/youtube-logo.svg">
       </div>
@@ -41,7 +41,7 @@
         <div class="my-channel-container">
          <img class="my-channel" src="images/my-channel.jpeg">
         </div>
-      </header>
+      </div>
 
     </div>
 
